--- a/css/aula6.css
+++ b/css/aula6.css
@@ -2,10 +2,11 @@
     color: blue;
     background-color: gray;
     width: 500px;
-    height: 500px;
+    height: 850px;
+
 }
 .special.box{
-    position: fixed;
+    /*position: fixed;*/
     top: 20px;
     left: 20px;
     background-color: cyan;
@@ -36,6 +37,32 @@ div > .box{
     padding: 10px;
     border: 5px solid;
 }
-#FC440F{
-    margin: 15px;
+/*p{
+    border-color: 1px solid black;
+    background-color: gray;
+    margin: 0;
+}*/
+#content{
+    float: left;
+    text-align: center;
+    border-color: 1px solid red;
+    background-color: purple;
+    color: white;
+    width: 25%;
+}
+p{
+    background-color: aqua;
+    border: 1px solid red;
+    overflow: hidden;
+}
+img{
+    float: right;
+    width: 10%;
+    height: 10%;
+    margin-right: 10%;
+}
+h5{
+    
+    border: 6px solid blue;
+    background-color: silver;
 }
